--- a/vms/templates/vm_reset.html
+++ b/vms/templates/vm_reset.html
@@ -25,6 +25,7 @@
                             <dt class="col-2 text-right">内存:</dt> <dd class="col-10">{{ vm.mem }} MB</dd>
                             <dt class="col-2 text-right">镜像:</dt> <dd class="col-10">{{ vm.image }}</dd>
                             <dt class="col-2 text-right">机组:</dt> <dd class="col-10">{{ vm.host.group }}</dd>
+                            <dt class="col-2 text-right">宿主机:</dt> <dd class="col-10">{{ vm.host.ipv4 }}</dd>
                             <dt class="col-2 text-right">备注:</dt> <dd class="col-10">{{ vm.remarks }}</dd>
                         </dl>
                         <form id="id-form-vm-reset">
