--- a/vms/templates/vm_detail.html
+++ b/vms/templates/vm_detail.html
@@ -11,6 +11,11 @@
     .mouse-hover-show {
         display: none;
     }
+    .line-limit-length {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
     </style>
 {% endblock %}
 {% block title %}云主机详情{% endblock %}
@@ -138,7 +143,7 @@
                                     {% for disk in vm.vdisks %}
                                         <tr id="tr_{{ disk.uuid }}">
                                             <td>{{ disk.dev }}</td>
-                                            <td><b>{{ disk.uuid }}</b></td>
+                                            <td class="line-limit-length" style="max-width: 150px;" title="{{ disk.uuid }}"><b>{{ disk.uuid }}</b></td>
                                             <td>{{ disk.quota.group }}</td>
                                             <td>{{ disk.quota }}</td>
                                             <td>{{ disk.size|sizeformat:'GB' }}</td>
@@ -185,7 +190,7 @@
                                     {% for snap in vm.sys_snaps %}
                                         <tr id="tr_snap_{{ snap.id }}">
                                             <td>{{ snap.id }}</td>
-                                            <td>{{ snap.snap }}</td>
+                                            <td class="line-limit-length" style="max-width: 150px;" title="{{ snap.snap }}">{{ snap.snap }}</td>
                                             <td>{{ snap.create_time |date:'Y-m-d H:i:s' }}</td>
                                             <td class="mouse-hover">
                                                 <div>
