pci列表只显用户示有权限的设备

--- a/device/templates/pci_list.html
+++ b/device/templates/pci_list.html
@@ -139,4 +139,5 @@
 
 {% block script %}
     <script type="text/javascript" src="{% static 'evcloud/common.js' %}"></script>
+    <script type="text/javascript" src="{% static 'device/pci_list.js' %}"></script>
 {% endblock %}
