--- a/vdisk/templates/vdisk_create.html
+++ b/vdisk/templates/vdisk_create.html
@@ -59,10 +59,13 @@
                             {% else %}
                                 <select name="size" class="form-control" id="id-size">
                                     <option value="10">10</option>
+                                    <option value="20">20</option>
                                     <option value="50">50</option>
                                     <option value="100">100</option>
+                                    <option value="200">200</option>
                                     <option value="500">500</option>
                                     <option value="1000">1000</option>
+                                    <option value="1500">1500</option>
                                     <option value="2000">2000</option>
                                 </select>
                             {% endif %}
