--- a/vms/templates/vm_mount_pci.html
+++ b/vms/templates/vm_mount_pci.html
@@ -78,7 +78,7 @@
                             <td>已被挂载</td>
                         {% else %}
                             <td>
-                                <button type="button" class="btn btn-xs btn-success btn-pci-mount" data-pci-id="{{ dev.id }}">挂载</button>
+                                <button type="button" class="btn btn-sm btn-success btn-pci-mount" data-pci-id="{{ dev.id }}">挂载</button>
                             </td>
                         {% endif %}
                     </tr>
