--- a/vms/templates/vm_detail.html
+++ b/vms/templates/vm_detail.html
@@ -21,7 +21,7 @@
 {% block title %}云主机详情{% endblock %}
 
 {% block boby %}
-    <div class="container-fluid offset-lg-1 col-lg-10">
+    <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
                 <span class="card-title"><strong>云主机详情</strong></span>
@@ -122,8 +122,9 @@
                         </li>
                         <li class="list-group-item">
                             <p><strong>云硬盘</strong></p>
-                            {% if vm.vdisks %}
-                                <table class="table table-default table-disk-list"
+                        {% with vm.vdisks as vdisks %}
+                            {% if vdisks %}
+                                <table class="table table-default text-center table-disk-list"
                                        style="word-wrap:break-word;word-break:break-all;">
                                     <thead class="thead-light">
                                     <tr>
@@ -140,7 +141,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    {% for disk in vm.vdisks %}
+                                    {% for disk in vdisks %}
                                         <tr id="tr_{{ disk.uuid }}">
                                             <td>{{ disk.dev }}</td>
                                             <td class="line-limit-length" style="max-width: 150px;" title="{{ disk.uuid }}"><b>{{ disk.uuid }}</b></td>
@@ -148,7 +149,7 @@
                                             <td>{{ disk.quota }}</td>
                                             <td>{{ disk.size|sizeformat:'GB' }}</td>
                                             <td>{{ disk.user }}</td>
-                                            <td>{{ disk.create_time }}</td>
+                                            <td>{{ disk.create_time | date:'Y-m-d H:i:s' }}</td>
                                             <td>
                                                 {% if disk.enable %}
                                                     <i class="fa fa-check"></i>
@@ -160,7 +161,7 @@
                                                 <span>{{ disk.remarks|default_if_none:'' }}</span>
                                             </td>
                                             <td>
-                                                <button type="button" class="btn btn-sm btn-success btn-disk-umount"
+                                                <button type="button" class="btn btn-sm btn-danger btn-disk-umount"
                                                         data-disk-uuid="{{ disk.uuid }}">卸载
                                                 </button>
                                             </td>
@@ -171,11 +172,59 @@
                             {% else %}
                                 未挂载云硬盘
                             {% endif %}
+                        {% endwith %}
+                        </li>
+                        <li class="list-group-item">
+                        <p><strong>PCI设备</strong></p>
+                        {% with vm.pci_devices as devices  %}
+                            {% if devices %}
+                                <table class="table table-default text-center table-pci-list" style="word-wrap:break-word;word-break:break-all;">
+                                    <thead class="thead-light">
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>类型</th>
+                                        <th>地址</th>
+                                        <th>宿主机</th>
+                                        <th>机组</th>
+                                        <th>状态</th>
+                                        <th>备注</th>
+                                        <th>操作</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for dev in devices %}
+                                        <tr id="tr_{{ dev.id }}">
+                                            <td><b>{{ dev.id }}</b></td>
+                                            <td>{{ dev.type_display }}</td>
+                                            <td>{{ dev.address }}</td>
+                                            <td>{{ dev.host.ipv4 }}</td>
+                                            <td>{{ dev.host.group }}</td>
+                                            <td>
+                                                {% if dev.enable %}
+                                                    <i class="fa fa-check"></i>
+                                                {% else %}
+                                                    <i class="fa fa-times"></i>
+                                                {% endif %}
+                                            </td>
+                                            <td><span>{{ dev.remarks|default_if_none:'' }}</span></td>
+                                            <td>
+                                                <button type="button" class="btn btn-sm btn-danger btn-pci-unmount"
+                                                        data-pci-id="{{ dev.id }}">卸载
+                                                </button>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            {% else %}
+                                未挂载PCI设备
+                            {% endif %}
+                        {% endwith %}
                         </li>
                         <li class="list-group-item" id="id-vm-snap-content">
                             <p><strong>云主机快照</strong></p>
                             {% if vm.sys_snaps %}
-                                <table class="table table-default table-vm-snap-list"
+                                <table class="table table-default text-center table-vm-snap-list"
                                        style="word-wrap:break-word;word-break:break-all;">
                                     <thead class="thead-light">
                                     <tr>
