--- a/network/templates/vlan_list.html
+++ b/network/templates/vlan_list.html
@@ -8,7 +8,7 @@
 {% block title %}VLAN列表{% endblock %}
 
 {% block boby %}
-    <div class="offset-md-1 col-md-10">
+    <div class="col-md-12">
         <div class="card">
             <div class="card-header">
                 <span class="card-title"><strong>VLAN列表</strong></span>
