--- a/reports/templates/reports_center.html
+++ b/reports/templates/reports_center.html
@@ -6,7 +6,7 @@
 {% block head %}{% endblock %}
 
 {% block boby %}
-    <div class="container-fluid offset-lg-1 col-lg-10">
+    <div class="container-fluid col-lg-12">
         <p class="h4">分中心资源统计:<strong id="id-current-center" data-center-id="{{ center_id }}"></strong></p>
         <div class="card border-info">
             <table class="table" id="id-table-center">
