--- a/reports/templates/reports_list.html
+++ b/reports/templates/reports_list.html
@@ -8,7 +8,7 @@
 {% block head %}{% endblock %}
 
 {% block boby %}
-    <div class="container-fluid offset-lg-1 col-lg-10">
+    <div class="container-fluid col-lg-12">
         <p class="h3">资源分配统计</p>
         <div class="card border-info">
             <div class="card-header">
