一些html布局样式修改

--- a/network/templates/vlan_add.html
+++ b/network/templates/vlan_add.html
@@ -8,7 +8,7 @@
 {% block title %}VLAN信息{% endblock %}
 
 {% block boby %}
-    <div class="offset-md-1 col-md-10">
+    <div class="col-12">
         <div class="card">
             <div class="card-header">
                 <span class="card-title"><strong>VLAN信息</strong></span>
