--- a/vms/templates/vm_reset.html
+++ b/vms/templates/vm_reset.html
@@ -5,7 +5,7 @@
 {% block title %}重置系统镜像{% endblock %}
 
 {% block boby %}
-    <div class="container-fluid offset-lg-1 col-lg-10">
+    <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
                 <span class="card-title"><strong>重置云主机系统镜像</strong></span>
