--- a/vdisk/templates/vdisk_create.html
+++ b/vdisk/templates/vdisk_create.html
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <div class="">
+                        <div class="offset-sm-1">
                             <button type="submit" class="btn btn-primary">创建</button>
                         </div>
                     </div>
