--- a/vms/templates/vm_edit.html
+++ b/vms/templates/vm_edit.html
@@ -6,7 +6,7 @@
 {% block head %}{% endblock %}
 
 {% block boby %}
-    <div class="container-fluid offset-md-1 offset-lg-3 col-md-10 col-lg-6">
+    <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
                 <span class="card-title">修改云主机</span>
@@ -15,7 +15,7 @@
                 </a></span>
             </div>
             <div class="card-body">
-                <div class="offset-sm-1">
+                <div class="offset-sm-0 offset-md-1">
                     <dl class="row">
                         <dt class="col-2 text-right">云主机UUID:</dt> <dd class="col-10" id="id-edit-vm-uuid">{{ vm.hex_uuid }}</dd>
                         <dt class="col-2 text-right">云主机IP:</dt> <dd class="col-10">{{ vm.ipv4 }}</dd>
@@ -30,8 +30,8 @@
                 <hr style=" height:1px;border:1px;border-top:1px solid #185598;"/>
                 <form class="form-horizontal" id="id-form-vm-edit">
                     <div class="form-group row">
-                        <label for="id-vcpu" class="offset-sm-1 col-sm-2 col-form-label">新CPU数</label>
-                        <div class="col-sm-7 form-inline">
+                        <label for="id-vcpu" class="offset-sm-0 col-sm-3 offset-md-1 col-md-2 text-right col-form-label">新CPU数:</label>
+                        <div class="col-sm-9 col-md-8 form-inline">
                             {% if user.is_superuser %}
                                 <input name="vcpu" type="text" class="form-control" id="id-vcpu" value="{{ vm.vcpu }}" required>
                             {% else %}
@@ -46,8 +46,8 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="id-mem" class="offset-sm-1 col-sm-2 col-form-label">新内存大小</label>
-                        <div class="col-sm-7 form-inline">
+                        <label for="id-mem" class="offset-sm-0 col-sm-3 offset-md-1 col-md-2 text-right col-form-label">新内存大小:</label>
+                        <div class="col-sm-9 col-md-8 form-inline">
                             {% if user.is_superuser %}
                                 <input name="mem" type="text" class="form-control" id="id-mem" value="{{ vm.mem }}">
                             {% else %}
@@ -64,8 +64,8 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <div class="offset-sm-2 col-sm-10">
-                            <button type="submit" class="btn btn-primary">修改</button>
+                        <div class="offset-sm-0 col-sm-3 offset-md-1 col-md-2">
+                            <button type="submit" class="btn btn-primary float-right">修改</button>
                         </div>
                     </div>
                 </form>
