--- a/vms/templates/vm_migrate.html
+++ b/vms/templates/vm_migrate.html
@@ -5,7 +5,7 @@
 {% block title %}迁移云主机{% endblock %}
 
 {% block boby %}
-    <div class="container-fluid offset-lg-1 col-lg-10">
+    <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
                 <span class="card-title"><strong>迁移云主机</strong></span>
