--- a/vms/templates/vm_mount_disk.html
+++ b/vms/templates/vm_mount_disk.html
@@ -5,7 +5,7 @@
 {% block title %}挂载云硬盘{% endblock %}
 
 {% block boby %}
-    <div class="container-fluid offset-lg-1 col-lg-10">
+    <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
                 <span class="card-title"><strong>挂载云硬盘</strong></span>
