--- a/vms/templates/vm_mount_pci.html
+++ b/vms/templates/vm_mount_pci.html
@@ -4,7 +4,7 @@
 {% block title %}挂载PCI设备{% endblock %}
 
 {% block boby %}
-    <div class="container-fluid offset-lg-1 col-lg-10">
+    <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
                 <span class="card-title"><strong>挂载PCI设备</strong></span>
