--- a/vms/templates/vms_create.html
+++ b/vms/templates/vms_create.html
@@ -6,7 +6,7 @@
 {% block head %}{% endblock %}
 
 {% block boby %}
-    <div class="container-fluid offset-md-1 offset-lg-2 col-md-10 col-lg-8">
+    <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
                 <span class="card-title">创建云主机</span>
@@ -17,7 +17,7 @@
             <div class="card-body align-content-center">
                 <form class="form-horizontal" >
                     <div class="form-group row">
-                        <label for="id-center" class="offset-sm-1 col-sm-2 col-form-label">分中心</label>
+                        <label for="id-center" class="offset-sm-1 col-sm-2 text-right col-form-label">分中心</label>
                         <div class="col-sm-7">
                             <select name="center_id" class="form-control" id="id-center">
                                 <option value="">--</option>
@@ -30,7 +30,7 @@
                 </form>
                 <form class="form-horizontal" id="id-form-vm-create">
                     <div class="form-group row">
-                        <label for="id-group" class="offset-sm-1 col-sm-2 col-form-label">机组</label>
+                        <label for="id-group" class="offset-sm-1 col-sm-2 text-right col-form-label">机组</label>
                         <div class="col-sm-7">
                             <select name="group_id" class="form-control" id="id-group">
                                 <option value="">--</option>
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="id-vlan" class="offset-sm-1 col-sm-2 col-form-label">网段</label>
+                        <label for="id-vlan" class="offset-sm-1 col-sm-2 text-right col-form-label">网段</label>
                         <div class="col-sm-7">
                             <select name="vlan_id" class="form-control" id="id-vlan">
                                 <option value="">自动选择</option>
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="id-ipv4" class="offset-sm-1 col-sm-2 col-form-label">IP</label>
+                        <label for="id-ipv4" class="offset-sm-1 col-sm-2 text-right col-form-label">IP</label>
                         <div class="col-sm-7">
                             <select name="ipv4" class="form-control" id="id-ipv4">
                                 <option value="">自动选择</option>
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="id-host" class="offset-sm-1 col-sm-2 col-form-label">宿主机</label>
+                        <label for="id-host" class="offset-sm-1 col-sm-2 text-right col-form-label">宿主机</label>
                         <div class="col-sm-7">
                             <select name="host_id" class="form-control" id="id-host">
                                 <option value="">自动选择</option>
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="id-image" class="offset-sm-1 col-sm-2 col-form-label">系统镜像</label>
+                        <label for="id-image" class="offset-sm-1 col-sm-2 text-right col-form-label">系统镜像</label>
                         <div class="col-sm-2">
                             <select class="form-control" id="id-image-tag">
                                 {% for id, tag in image_tags %}
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="id-vcpu" class="offset-sm-1 col-sm-2 col-form-label">CPU数</label>
+                        <label for="id-vcpu" class="offset-sm-1 col-sm-2 text-right col-form-label">CPU数</label>
                         <div class="col-sm-7 form-inline">
                             {% if user.is_superuser %}
                                 <input name="vcpu" type="text" class="form-control" id="id-vcpu" value="2" required>
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="id-mem" class="offset-sm-1 col-sm-2 col-form-label">内存大小</label>
+                        <label for="id-mem" class="offset-sm-1 col-sm-2 text-right col-form-label">内存大小</label>
                         <div class="col-sm-7 form-inline">
                             {% if user.is_superuser %}
                                 <input name="mem" type="text" class="form-control" id="id-mem" value="2048">
@@ -117,14 +117,14 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="id-remarks" class="offset-sm-1 col-sm-2 col-form-label">备注</label>
+                        <label for="id-remarks" class="offset-sm-1 col-sm-2 text-right col-form-label">备注</label>
                         <div class="col-sm-7">
                             <input name="remarks" type="text" class="form-control" id="id-remarks">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <div class="offset-sm-2 col-sm-10">
-                            <button type="submit" class="btn btn-primary">创建</button>
+                        <div class="offset-sm-1 col-sm-2">
+                            <button type="submit" class="btn btn-primary float-right">创建</button>
                         </div>
                     </div>
                 </form>
