--- a/vdisk/templates/vdisk_create.html
+++ b/vdisk/templates/vdisk_create.html
@@ -6,7 +6,7 @@
 {% block head %}{% endblock %}
 
 {% block boby %}
-    <div class="container-fluid offset-md-2 offset-lg-3 col-md-8 col-lg-6">
+    <div class="container-fluid col-sm-12 offset-md-1 col-md-10 offset-lg-2 col-lg-8">
         <div class="card">
             <div class="card-header">
                 <span class="card-title">创建云硬盘</span>
