vcpu和mem配置改为flavor样式

--- a/vms/templates/vm_edit.html
+++ b/vms/templates/vm_edit.html
@@ -30,37 +30,13 @@
                 <hr style=" height:1px;border:1px;border-top:1px solid #185598;"/>
                 <form class="form-horizontal" id="id-form-vm-edit">
                     <div class="form-group row">
-                        <label for="id-vcpu" class="offset-sm-0 col-sm-3 offset-md-1 col-md-2 text-right col-form-label">新CPU数:</label>
-                        <div class="col-sm-9 col-md-8 form-inline">
-                            {% if user.is_superuser %}
-                                <input name="vcpu" type="text" class="form-control" id="id-vcpu" value="{{ vm.vcpu }}" required>
-                            {% else %}
-                                <select name="vcpu" class="form-control" id="id-vcpu" required>
-                                    <option value="">--</option>
-                                    <option value="2">2</option>
-                                    <option value="4">4</option>
-                                    <option value="8">8</option>
-                                </select>
-                            {% endif %}
-                            <span>个</span>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="id-mem" class="offset-sm-0 col-sm-3 offset-md-1 col-md-2 text-right col-form-label">新内存大小:</label>
-                        <div class="col-sm-9 col-md-8 form-inline">
-                            {% if user.is_superuser %}
-                                <input name="mem" type="text" class="form-control" id="id-mem" value="{{ vm.mem }}">
-                            {% else %}
-                                <select name="mem" class="form-control" id="id-mem">
-                                    <option value="">--</option>
-                                    <option value="1024">1024</option>
-                                    <option value="2048">2048</option>
-                                    <option value="4096">4096</option>
-                                    <option value="8192">8192</option>
-                                    <option value="16384">16384</option>
-                                </select>
-                            {% endif %}
-                            <span>MB</span>
+                        <label for="id-flavor" class="offset-sm-1 col-sm-2 text-right col-form-label">配置式样</label>
+                        <div class="col-sm-7 form-inline">
+                            <select name="flavor_id" class="form-control" id="id-flavor">
+                                {% for f in flavors %}
+                                    <option value="{{f.id}}">CPU: {{ f.vcpus }}核 / RAM: {{ f.ram }}MB</option>
+                                {% endfor %}
+                            </select>
                         </div>
                     </div>
                     <div class="form-group row">
