网页字体大小设置

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <style>
         html{
             height: 100%;
+            font-size: 14px;
         }
         body{
             display: flex;
