vpn和network一些细节修改

--- a/network/templates/vlan_list.html
+++ b/network/templates/vlan_list.html
@@ -21,6 +21,7 @@
                         <th>VLAN</th>
                         <th>网桥</th>
                         <th>类型</th>
+                        <th>标签</th>
                         <th>子网IP</th>
                         <th>子网掩码</th>
                         <th>网关</th>
@@ -37,6 +38,7 @@
                         <th>{{ vlan.name }}</th>
                         <th>{{ vlan.br }}</th>
                         <th>{{ vlan.net_type }}</th>
+                        <th>{{ vlan.tag_display }}</th>
                         <th>{{ vlan.subnet_ip }}</th>
                         <th>{{ vlan.net_mask }}</th>
                         <th>{{ vlan.gateway }}</th>
