logo，README.md修改

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,9 @@
 <body>
 <div class="page-header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">EVCloud</a>
+        <a class="navbar-brand" href="/">
+            <img src="{% static 'images/logo/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+            EVCloud</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
