--- a/vms/templates/vm_detail.html
+++ b/vms/templates/vm_detail.html
@@ -44,7 +44,7 @@
                                 <div class="col-10">
                                     <div class="row">
                                         <div class="col-4">
-                                            <strong>运行状态：</strong><span id="vm_status_{{ vm.hex_uuid }}"><img src="{% static 'images/loading34.gif' %}" width="43px"/></span>
+                                            <strong>运行状态：</strong><span id="vm_status_{{ vm.hex_uuid }}"></span>
                                             <button class="btn btn-sm btn-outline-success btn-update-vm-status"><i class="fa fa-sync"></i></button>
                                         </div>
                                         <div class="col-4"><strong>创建者：</strong>{{vm.user}}</div>
