代码PEP8规范修改

--- a/device/templates/pci_mount.html
+++ b/device/templates/pci_mount.html
@@ -38,9 +38,9 @@
                             <form role="form" class="form-horizontal" method="get" action="">
                                 <div class="input-group" style="">
                                     <div class="input-group-prepend">
-                                        <label class="input-group-text" for="id-center">关键字</label>
+                                        <label class="input-group-text" for="id-search">关键字</label>
                                     </div>
-                                    <input type="text" class="form-control" name="search" value="{{ search }}"
+                                    <input type="text" class="form-control" id="id-search" name="search" value="{{ search }}"
                                            placeholder="搜 IP、备注"/>
                                     <span class="input-group-prepend"></span>
                                     <button type="submit" class="btn btn-primary form-control">筛选</button>
