--- a/network/templates/vlan_show.html
+++ b/network/templates/vlan_show.html
@@ -49,6 +49,6 @@
 {% endblock %}
 
 {% block script %}
-    <script type="text/javascript" src="{% static 'network/vms_list.js' %}"></script>
+    <script type="text/javascript" src="{% static 'network/vlan_list.js' %}"></script>
 {% endblock %}
 
